--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
             <div class="Right_side">
                 <div class="login-box">
                     <h2>Login</h2>
-                    <form method="POST" action="login">
+                    <form method="POST" action="homepage">
                         <div class="user-box">
                             <input type="text" name="username" required="" />
                             <label>Username</label>
@@ -22,6 +22,7 @@
                             <input type="password" name="password" required="" />
                             <label>Password</label>
                         </div>
+                        <br><br>
                         <div class="remember-me--forget-password">
                             <label>
                                 <input type="checkbox" name="item" checked />
