--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
             <div class="Right_side">
                 <div class="login-box">
                     <h2>Login</h2>
-                    <form method="POST" action="homepage">
+                    <form method="POST" action="/login">
                         <div class="user-box">
                             <input type="text" name="username" required="" />
                             <label>Username</label>
